tests/paczka1/fuzzy1/61779601.err
Error in line 8: nbhT2rw A421 4,5
Error in line 4: KT7CMwkF A421 63,7
Error in line 6: 6SuB4wf6F A382 14,5
Error in line 12: px9 A382 79,1
Error in line 26: 18AR A474 -1,0
Error in line 27: nbhT2rw S510 1,4
Error in line 34: px9 A421 40,7
